act-user-manager: Watch for the daemon going away and coming back

And set is-loaded accordingly. This causes properties to be invalidated
on the client side and then get re-fetched when the daemon comes back.

https://gitlab.freedesktop.org/accountsservice/accountsservice/issues/55